@@ -1,3 +1,6 @@
+hdparm-8.5
+	- fix u8->u16 bug in security commands for all of 8.x series, Christian Franke
+	- try and quiet errors from flush_buffer_cache()
 hdparm-8.4
 	- oops: v8.3 broke --write-sector.  Fix it again.
 hdparm-8.3
